Import of NESTING/Unicode-Wrap-0.03 from CPAN.
gitpan-cpan-distribution: Unicode-Wrap
gitpan-cpan-version:      0.03
gitpan-cpan-path:         NESTING/Unicode-Wrap-0.03.tar.gz
gitpan-cpan-author:       NESTING
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -10,3 +10,10 @@ Revision history for Perl extension Unicode::Wrap.
 	- Text::Wrap-style interface replaces interface in 0.01
 	- Explicit 'break_lines' function to do the meat of the work
        
+0.03  Tue Apr  8 22:19:09 CDT 2003
+	- Text::Wrap-style interface removed (belongs someplace like Text::Wrap)
+	- New test cases should test nearly every LB rule defined in UAX#14
+	- New property lookup code should be a little faster
+	- Bug fixes
+	- Completely different interface (sorry), should be easier to adapt to wider range of tasks
+	- Added dependency on 5.8, since unicore isn't available in 5.6
